starlark-rust/starlark/src/tests/uncategorized_error_display.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Traceback (most recent call last):
  * assert.bzl:5, in <module>
      add3(8)
  * assert.bzl:4, in add3
      add2(z)
  * imported.bzl:9, in add2
      add(z)
  * imported.bzl:11, in add
      x.append(z)
error: Immutable
  --> imported.bzl:11:3
   |
11 |   x.append(z)
   |   ^^^^^^^^^^^
   |
